# oak-server

./: LICENSE  README.md  deno.json  deps.ts  index.ts  package-lock.json  package.json  router-one.ts
common/auth/: jwt.ts
common/redis/: redis-cache-keys.ts  redis-client.ts
common/validation/: login-dto-validation.ts  regex.ts  register-dto-validation.ts
config/: environment-variables.ts
ffi/: Cargo.toml  bindings.json
ffi/bindings/: bindings.ts
ffi/src/: lib.rs
models/chat/: add-chat-channel-dto.ts  chat-channel-list-dto.ts  chat-channel-response-dto.ts  chat-message-dto.ts  current-chat-channel-response-dto.ts  simple-chat-response-dto.ts  simple-chat.ts
models/user-auth/: login-dto.ts  register-dto.ts
models/user-auth/400-responses/: base-400-response.ts
prisma/: schema.prisma
prisma/migrations/20240430223258_chatchannelandchatmessage/: migration.sql
prisma/migrations/20240430233636_init/: migration.sql
prisma/migrations/20240502003937_init/: migration.sql
prisma/migrations/20240502233202_chat_chanel_name/: migration.sql
prisma/migrations/20240502235417_chat_chanel_created_at/: migration.sql
routes/: index.ts
routes/chat/: chat-router.ts
routes/middleware/: jwt-validation.ts
routes/user-auth/: login-router.ts  register-router.ts
